# ArcticTern

./: .gitignore  ArcticTern.txt  CMakeLists.txt  Makefile  README.md  STM32F765VITx_FLASH.ld  STM32F765VI_FLASH.ld  arm-none-eabi-gcc_toolchain.cmake
Inc/: ComPc.h  Gyro.h  LineSensor.h  LineSensorModule.h  Spi.h  Util.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Src/: ComPc.cpp  Gyro.cpp  LineSensor.cpp  LineSensorModule.cpp  Spi.cpp  main.c  main.cpp  stm32f7xx_hal_msp.c  stm32f7xx_it.c  stm32f7xx_it.cpp
middleware/: CMakeLists.txt  ComPc.cpp  ComPc.h  Gyro.cpp  Led.cpp  Led.h  LineSensor.cpp  LineSensor.h  LineSensorModule.cpp  LineSensorModule.h  Qspi.cpp  Qspi.h  Speaker.cpp  Speaker.h  Spi.cpp  Spi.h  Switch.cpp  Switch.h  Timer.cpp  Timer.h  Usart.h  test.cpp
util/: CMakeLists.txt  Util.cpp  calcangle.cpp  calcangle.h
